// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OneColumnModal mobile with footer should match snapshot 1`] = `
<ModalDialog
  style={
    Array [
      Object {
        "_definition": Object {
          "background": "#ffffff",
        },
        "_len": 24,
        "_name": "dialog_144oaus",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "_definition": Object {
          "flexDirection": "column",
          "height": "100%",
        },
        "_len": 42,
        "_name": "contentFooterWrapper_1iwfx9c",
      }
    }
  >
    <View
      style={
        Object {
          "_definition": Object {
            "flexDirection": "column",
            "height": "100%",
            "overflow": "auto",
            "width": "100%",
          },
          "_len": 75,
          "_name": "smallContentWrapper_hs5dlt",
        }
      }
    >
      <ModalPanel
        color="light"
        content="Content"
        scrollOverflow={false}
        showCloseButton={true}
      />
    </View>
    <View
      style={
        Object {
          "_definition": Object {
            "minHeight": 64,
          },
          "_len": 16,
          "_name": "smallFooter_clw8y6",
        }
      }
    >
      <ModalFooter>
        Footer
      </ModalFooter>
    </View>
  </View>
</ModalDialog>
`;

exports[`OneColumnModal mobile without footer should match snapshot 1`] = `
<ModalDialog
  style={
    Array [
      Object {
        "_definition": Object {
          "background": "#ffffff",
        },
        "_len": 24,
        "_name": "dialog_144oaus",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "_definition": Object {
          "flexDirection": "column",
          "height": "100%",
        },
        "_len": 42,
        "_name": "contentFooterWrapper_1iwfx9c",
      }
    }
  >
    <View
      style={
        Object {
          "_definition": Object {
            "flexDirection": "column",
            "height": "100%",
            "overflow": "auto",
            "width": "100%",
          },
          "_len": 75,
          "_name": "smallContentWrapper_hs5dlt",
        }
      }
    >
      <ModalPanel
        color="light"
        content="Content"
        scrollOverflow={false}
        showCloseButton={true}
      />
    </View>
  </View>
</ModalDialog>
`;

exports[`OneColumnModal should render OneColumnModal with custom style 1`] = `
<LargeOneColumnModal
  content="Content"
  footer="Footer"
  style={
    Object {
      "maxHeight": 200,
      "maxWidth": 300,
    }
  }
>
  <ModalDialog
    style={
      Array [
        Object {
          "_definition": Object {
            "background": "#ffffff",
            "maxHeight": "90%",
            "maxWidth": 662,
            "width": "64.65%",
          },
          "_len": 74,
          "_name": "dialog_1quzky1",
        },
        Object {
          "maxHeight": 200,
          "maxWidth": 300,
        },
      ]
    }
  >
    <MediaLayout
      styleSheets={
        Object {
          "all": Object {
            "above": Object {
              "_definition": Object {
                "bottom": 0,
                "left": 0,
                "pointerEvents": "none",
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 1,
              },
              "_len": 95,
              "_name": "above_rhdmab",
            },
            "below": Object {
              "_definition": Object {
                "bottom": 0,
                "left": 0,
                "pointerEvents": "none",
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": -1,
              },
              "_len": 96,
              "_name": "below_11jjcse",
            },
            "wrapper": Object {
              "_definition": Object {
                "alignItems": "stretch",
                "borderRadius": 4,
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
              },
              "_len": 102,
              "_name": "wrapper_lvgznp",
            },
          },
          "small": Object {
            "wrapper": Object {
              "_definition": Object {
                "flexDirection": "column",
                "height": "100%",
                "padding": 16,
                "width": "100%",
              },
              "_len": 70,
              "_name": "wrapper_1ax72n8",
            },
          },
        }
      }
    >
      <MediaLayoutInternal
        mediaSpec={
          Object {
            "large": Object {
              "gutterWidth": 32,
              "marginWidth": 48,
              "query": "(min-width: 768px)",
              "totalColumns": 12,
            },
            "small": Object {
              "gutterWidth": 16,
              "marginWidth": 16,
              "query": "(max-width: 767px)",
              "totalColumns": 4,
            },
          }
        }
        ssrSize="large"
        styleSheets={
          Object {
            "all": Object {
              "above": Object {
                "_definition": Object {
                  "bottom": 0,
                  "left": 0,
                  "pointerEvents": "none",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "zIndex": 1,
                },
                "_len": 95,
                "_name": "above_rhdmab",
              },
              "below": Object {
                "_definition": Object {
                  "bottom": 0,
                  "left": 0,
                  "pointerEvents": "none",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "zIndex": -1,
                },
                "_len": 96,
                "_name": "below_11jjcse",
              },
              "wrapper": Object {
                "_definition": Object {
                  "alignItems": "stretch",
                  "borderRadius": 4,
                  "display": "flex",
                  "flexDirection": "row",
                  "position": "relative",
                },
                "_len": 102,
                "_name": "wrapper_lvgznp",
              },
            },
            "small": Object {
              "wrapper": Object {
                "_definition": Object {
                  "flexDirection": "column",
                  "height": "100%",
                  "padding": 16,
                  "width": "100%",
                },
                "_len": 70,
                "_name": "wrapper_1ax72n8",
              },
            },
          }
        }
      >
        <View
          style={
            Array [
              Array [
                Object {
                  "_definition": Object {
                    "alignItems": "stretch",
                    "borderRadius": 4,
                    "display": "flex",
                    "flexDirection": "row",
                    "position": "relative",
                  },
                  "_len": 102,
                  "_name": "wrapper_lvgznp",
                },
                false,
                false,
                Array [
                  undefined,
                  undefined,
                ],
              ],
              Array [
                Object {
                  "_definition": Object {
                    "background": "#ffffff",
                    "maxHeight": "90%",
                    "maxWidth": 662,
                    "width": "64.65%",
                  },
                  "_len": 74,
                  "_name": "dialog_1quzky1",
                },
                Object {
                  "maxHeight": 200,
                  "maxWidth": 300,
                },
              ],
            ]
          }
        >
          <StyleComponent
            style={
              Array [
                Array [
                  Object {
                    "_definition": Object {
                      "alignItems": "stretch",
                      "borderRadius": 4,
                      "display": "flex",
                      "flexDirection": "row",
                      "position": "relative",
                    },
                    "_len": 102,
                    "_name": "wrapper_lvgznp",
                  },
                  false,
                  false,
                  Array [
                    undefined,
                    undefined,
                  ],
                ],
                Array [
                  Object {
                    "_definition": Object {
                      "background": "#ffffff",
                      "maxHeight": "90%",
                      "maxWidth": 662,
                      "width": "64.65%",
                    },
                    "_len": 74,
                    "_name": "dialog_1quzky1",
                  },
                  Object {
                    "maxHeight": 200,
                    "maxWidth": 300,
                  },
                ],
              ]
            }
          >
            <div
              className=""
              style={
                Object {
                  "alignItems": "stretch",
                  "background": "#ffffff",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "boxSizing": "border-box",
                  "display": "flex",
                  "flexDirection": "row",
                  "margin": 0,
                  "maxHeight": 200,
                  "maxWidth": 300,
                  "minHeight": 0,
                  "minWidth": 0,
                  "padding": 0,
                  "position": "relative",
                  "width": "64.65%",
                  "zIndex": 0,
                }
              }
            >
              <View
                aria-labelledby="wb-modal-title"
                role="dialog"
              >
                <StyleComponent
                  aria-labelledby="wb-modal-title"
                  role="dialog"
                >
                  <div
                    aria-labelledby="wb-modal-title"
                    className=""
                    role="dialog"
                    style={
                      Object {
                        "alignItems": "stretch",
                        "borderStyle": "solid",
                        "borderWidth": 0,
                        "boxSizing": "border-box",
                        "display": "flex",
                        "flexDirection": "column",
                        "margin": 0,
                        "minHeight": 0,
                        "minWidth": 0,
                        "padding": 0,
                        "position": "relative",
                        "zIndex": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "_definition": Object {
                            "width": "100%",
                          },
                          "_len": 16,
                          "_name": "contentWrapper_zdxht7",
                        }
                      }
                    >
                      <StyleComponent
                        style={
                          Object {
                            "_definition": Object {
                              "width": "100%",
                            },
                            "_len": 16,
                            "_name": "contentWrapper_zdxht7",
                          }
                        }
                      >
                        <div
                          className=""
                          style={
                            Object {
                              "alignItems": "stretch",
                              "borderStyle": "solid",
                              "borderWidth": 0,
                              "boxSizing": "border-box",
                              "display": "flex",
                              "flexDirection": "column",
                              "margin": 0,
                              "minHeight": 0,
                              "minWidth": 0,
                              "padding": 0,
                              "position": "relative",
                              "width": "100%",
                              "zIndex": 0,
                            }
                          }
                        >
                          <ModalPanel
                            color="light"
                            content="Content"
                            footer="Footer"
                            scrollOverflow={true}
                            showCloseButton={true}
                          >
                            <MediaLayout
                              styleSheets={
                                Object {
                                  "all": Object {
                                    "closeButton": Object {
                                      "_definition": Object {
                                        "left": 16,
                                        "position": "absolute",
                                        "top": 16,
                                        "zIndex": 1,
                                      },
                                      "_len": 53,
                                      "_name": "closeButton_zjmm3o",
                                    },
                                    "dark": Object {
                                      "_definition": Object {
                                        "background": "#0a2a66",
                                        "color": "#ffffff",
                                      },
                                      "_len": 42,
                                      "_name": "dark_10k9z0e",
                                    },
                                    "hasFooter": Object {
                                      "_definition": Object {
                                        "paddingBottom": 32,
                                      },
                                      "_len": 20,
                                      "_name": "hasFooter_1pn52au",
                                    },
                                    "hasTitleBar": Object {
                                      "_definition": Object {
                                        "paddingTop": 32,
                                      },
                                      "_len": 17,
                                      "_name": "hasTitleBar_15lzjb6",
                                    },
                                    "wrapper": Object {
                                      "_definition": Object {
                                        "background": "white",
                                        "boxSizing": "border-box",
                                        "display": "flex",
                                        "flex": "1 1 auto",
                                        "flexDirection": "column",
                                        "height": "100%",
                                        "overflow": "hidden",
                                        "position": "relative",
                                        "width": "100%",
                                      },
                                      "_len": 180,
                                      "_name": "wrapper_d5azc2",
                                    },
                                  },
                                  "small": Object {
                                    "closeButton": Object {
                                      "_definition": Object {
                                        "left": 16,
                                        "top": 16,
                                      },
                                      "_len": 20,
                                      "_name": "closeButton_1uu2ylb",
                                    },
                                    "withCloseButton": Object {
                                      "_definition": Object {
                                        "paddingTop": 64,
                                      },
                                      "_len": 17,
                                      "_name": "withCloseButton_1qowqp",
                                    },
                                  },
                                }
                              }
                            >
                              <MediaLayoutInternal
                                mediaSpec={
                                  Object {
                                    "large": Object {
                                      "gutterWidth": 32,
                                      "marginWidth": 48,
                                      "query": "(min-width: 768px)",
                                      "totalColumns": 12,
                                    },
                                    "small": Object {
                                      "gutterWidth": 16,
                                      "marginWidth": 16,
                                      "query": "(max-width: 767px)",
                                      "totalColumns": 4,
                                    },
                                  }
                                }
                                ssrSize="large"
                                styleSheets={
                                  Object {
                                    "all": Object {
                                      "closeButton": Object {
                                        "_definition": Object {
                                          "left": 16,
                                          "position": "absolute",
                                          "top": 16,
                                          "zIndex": 1,
                                        },
                                        "_len": 53,
                                        "_name": "closeButton_zjmm3o",
                                      },
                                      "dark": Object {
                                        "_definition": Object {
                                          "background": "#0a2a66",
                                          "color": "#ffffff",
                                        },
                                        "_len": 42,
                                        "_name": "dark_10k9z0e",
                                      },
                                      "hasFooter": Object {
                                        "_definition": Object {
                                          "paddingBottom": 32,
                                        },
                                        "_len": 20,
                                        "_name": "hasFooter_1pn52au",
                                      },
                                      "hasTitleBar": Object {
                                        "_definition": Object {
                                          "paddingTop": 32,
                                        },
                                        "_len": 17,
                                        "_name": "hasTitleBar_15lzjb6",
                                      },
                                      "wrapper": Object {
                                        "_definition": Object {
                                          "background": "white",
                                          "boxSizing": "border-box",
                                          "display": "flex",
                                          "flex": "1 1 auto",
                                          "flexDirection": "column",
                                          "height": "100%",
                                          "overflow": "hidden",
                                          "position": "relative",
                                          "width": "100%",
                                        },
                                        "_len": 180,
                                        "_name": "wrapper_d5azc2",
                                      },
                                    },
                                    "small": Object {
                                      "closeButton": Object {
                                        "_definition": Object {
                                          "left": 16,
                                          "top": 16,
                                        },
                                        "_len": 20,
                                        "_name": "closeButton_1uu2ylb",
                                      },
                                      "withCloseButton": Object {
                                        "_definition": Object {
                                          "paddingTop": 64,
                                        },
                                        "_len": 17,
                                        "_name": "withCloseButton_1qowqp",
                                      },
                                    },
                                  }
                                }
                              >
                                <View
                                  style={
                                    Array [
                                      Array [
                                        Object {
                                          "_definition": Object {
                                            "background": "white",
                                            "boxSizing": "border-box",
                                            "display": "flex",
                                            "flex": "1 1 auto",
                                            "flexDirection": "column",
                                            "height": "100%",
                                            "overflow": "hidden",
                                            "position": "relative",
                                            "width": "100%",
                                          },
                                          "_len": 180,
                                          "_name": "wrapper_d5azc2",
                                        },
                                        false,
                                        false,
                                        Array [
                                          undefined,
                                          undefined,
                                        ],
                                      ],
                                      false,
                                      undefined,
                                    ]
                                  }
                                >
                                  <StyleComponent
                                    style={
                                      Array [
                                        Array [
                                          Object {
                                            "_definition": Object {
                                              "background": "white",
                                              "boxSizing": "border-box",
                                              "display": "flex",
                                              "flex": "1 1 auto",
                                              "flexDirection": "column",
                                              "height": "100%",
                                              "overflow": "hidden",
                                              "position": "relative",
                                              "width": "100%",
                                            },
                                            "_len": 180,
                                            "_name": "wrapper_d5azc2",
                                          },
                                          false,
                                          false,
                                          Array [
                                            undefined,
                                            undefined,
                                          ],
                                        ],
                                        false,
                                        undefined,
                                      ]
                                    }
                                  >
                                    <div
                                      className=""
                                      style={
                                        Object {
                                          "alignItems": "stretch",
                                          "background": "white",
                                          "borderStyle": "solid",
                                          "borderWidth": 0,
                                          "boxSizing": "border-box",
                                          "display": "flex",
                                          "flex": "1 1 auto",
                                          "flexDirection": "column",
                                          "height": "100%",
                                          "margin": 0,
                                          "minHeight": 0,
                                          "minWidth": 0,
                                          "overflow": "hidden",
                                          "padding": 0,
                                          "position": "relative",
                                          "width": "100%",
                                          "zIndex": 0,
                                        }
                                      }
                                    >
                                      <MediaLayout
                                        styleSheets={
                                          Object {
                                            "all": Object {
                                              "closeButton": Object {
                                                "_definition": Object {
                                                  "left": 16,
                                                  "position": "absolute",
                                                  "top": 16,
                                                  "zIndex": 1,
                                                },
                                                "_len": 53,
                                                "_name": "closeButton_zjmm3o",
                                              },
                                              "dark": Object {
                                                "_definition": Object {
                                                  "background": "#0a2a66",
                                                  "color": "#ffffff",
                                                },
                                                "_len": 42,
                                                "_name": "dark_10k9z0e",
                                              },
                                              "hasFooter": Object {
                                                "_definition": Object {
                                                  "paddingBottom": 32,
                                                },
                                                "_len": 20,
                                                "_name": "hasFooter_1pn52au",
                                              },
                                              "hasTitleBar": Object {
                                                "_definition": Object {
                                                  "paddingTop": 32,
                                                },
                                                "_len": 17,
                                                "_name": "hasTitleBar_15lzjb6",
                                              },
                                              "wrapper": Object {
                                                "_definition": Object {
                                                  "background": "white",
                                                  "boxSizing": "border-box",
                                                  "display": "flex",
                                                  "flex": "1 1 auto",
                                                  "flexDirection": "column",
                                                  "height": "100%",
                                                  "overflow": "hidden",
                                                  "position": "relative",
                                                  "width": "100%",
                                                },
                                                "_len": 180,
                                                "_name": "wrapper_d5azc2",
                                              },
                                            },
                                            "small": Object {
                                              "closeButton": Object {
                                                "_definition": Object {
                                                  "left": 16,
                                                  "top": 16,
                                                },
                                                "_len": 20,
                                                "_name": "closeButton_1uu2ylb",
                                              },
                                              "withCloseButton": Object {
                                                "_definition": Object {
                                                  "paddingTop": 64,
                                                },
                                                "_len": 17,
                                                "_name": "withCloseButton_1qowqp",
                                              },
                                            },
                                          }
                                        }
                                      >
                                        <MediaLayoutInternal
                                          mediaSpec={
                                            Object {
                                              "large": Object {
                                                "gutterWidth": 32,
                                                "marginWidth": 48,
                                                "query": "(min-width: 768px)",
                                                "totalColumns": 12,
                                              },
                                              "small": Object {
                                                "gutterWidth": 16,
                                                "marginWidth": 16,
                                                "query": "(max-width: 767px)",
                                                "totalColumns": 4,
                                              },
                                            }
                                          }
                                          ssrSize="large"
                                          styleSheets={
                                            Object {
                                              "all": Object {
                                                "closeButton": Object {
                                                  "_definition": Object {
                                                    "left": 16,
                                                    "position": "absolute",
                                                    "top": 16,
                                                    "zIndex": 1,
                                                  },
                                                  "_len": 53,
                                                  "_name": "closeButton_zjmm3o",
                                                },
                                                "dark": Object {
                                                  "_definition": Object {
                                                    "background": "#0a2a66",
                                                    "color": "#ffffff",
                                                  },
                                                  "_len": 42,
                                                  "_name": "dark_10k9z0e",
                                                },
                                                "hasFooter": Object {
                                                  "_definition": Object {
                                                    "paddingBottom": 32,
                                                  },
                                                  "_len": 20,
                                                  "_name": "hasFooter_1pn52au",
                                                },
                                                "hasTitleBar": Object {
                                                  "_definition": Object {
                                                    "paddingTop": 32,
                                                  },
                                                  "_len": 17,
                                                  "_name": "hasTitleBar_15lzjb6",
                                                },
                                                "wrapper": Object {
                                                  "_definition": Object {
                                                    "background": "white",
                                                    "boxSizing": "border-box",
                                                    "display": "flex",
                                                    "flex": "1 1 auto",
                                                    "flexDirection": "column",
                                                    "height": "100%",
                                                    "overflow": "hidden",
                                                    "position": "relative",
                                                    "width": "100%",
                                                  },
                                                  "_len": 180,
                                                  "_name": "wrapper_d5azc2",
                                                },
                                              },
                                              "small": Object {
                                                "closeButton": Object {
                                                  "_definition": Object {
                                                    "left": 16,
                                                    "top": 16,
                                                  },
                                                  "_len": 20,
                                                  "_name": "closeButton_1uu2ylb",
                                                },
                                                "withCloseButton": Object {
                                                  "_definition": Object {
                                                    "paddingTop": 64,
                                                  },
                                                  "_len": 17,
                                                  "_name": "withCloseButton_1qowqp",
                                                },
                                              },
                                            }
                                          }
                                        >
                                          <CloseButton
                                            light={false}
                                            style={
                                              Array [
                                                Object {
                                                  "_definition": Object {
                                                    "left": 16,
                                                    "position": "absolute",
                                                    "top": 16,
                                                    "zIndex": 1,
                                                  },
                                                  "_len": 53,
                                                  "_name": "closeButton_zjmm3o",
                                                },
                                                false,
                                                false,
                                                Array [
                                                  undefined,
                                                  undefined,
                                                ],
                                              ]
                                            }
                                          >
                                            <IconButton
                                              aria-label="Close modal"
                                              color="default"
                                              disabled={false}
                                              icon={
                                                Object {
                                                  "medium": "M12 10.586L7.706 6.293a1 1 0 1 0-1.413 1.413L10.586 12l-4.293 4.294a1 1 0 0 0 1.413 1.413L12 13.414l4.294 4.293a1 1 0 0 0 1.413-1.413L13.414 12l4.293-4.294a1 1 0 1 0-1.413-1.413L12 10.586z",
                                                  "small": "M8 6.586l3.293-3.293a1 1 0 0 1 1.414 1.414L9.414 8l3.293 3.293a1 1 0 0 1-1.414 1.414L8 9.414l-3.293 3.293a1 1 0 1 1-1.414-1.414L6.586 8 3.293 4.707a1 1 0 0 1 1.414-1.414L8 6.586z",
                                                }
                                              }
                                              kind="tertiary"
                                              light={false}
                                              style={
                                                Array [
                                                  Object {
                                                    "_definition": Object {
                                                      "left": 16,
                                                      "position": "absolute",
                                                      "top": 16,
                                                      "zIndex": 1,
                                                    },
                                                    "_len": 53,
                                                    "_name": "closeButton_zjmm3o",
                                                  },
                                                  false,
                                                  false,
                                                  Array [
                                                    undefined,
                                                    undefined,
                                                  ],
                                                ]
                                              }
                                            >
                                              <ClickableBehavior
                                                disabled={false}
                                                role="button"
                                              >
                                                <IconButtonCore
                                                  aria-label="Close modal"
                                                  color="default"
                                                  disabled={false}
                                                  focused={false}
                                                  hovered={false}
                                                  icon={
                                                    Object {
                                                      "medium": "M12 10.586L7.706 6.293a1 1 0 1 0-1.413 1.413L10.586 12l-4.293 4.294a1 1 0 0 0 1.413 1.413L12 13.414l4.294 4.293a1 1 0 0 0 1.413-1.413L13.414 12l4.293-4.294a1 1 0 1 0-1.413-1.413L12 10.586z",
                                                      "small": "M8 6.586l3.293-3.293a1 1 0 0 1 1.414 1.414L9.414 8l3.293 3.293a1 1 0 0 1-1.414 1.414L8 9.414l-3.293 3.293a1 1 0 1 1-1.414-1.414L6.586 8 3.293 4.707a1 1 0 0 1 1.414-1.414L8 6.586z",
                                                    }
                                                  }
                                                  kind="tertiary"
                                                  light={false}
                                                  onBlur={[Function]}
                                                  onClick={[Function]}
                                                  onDragStart={[Function]}
                                                  onFocus={[Function]}
                                                  onKeyDown={[Function]}
                                                  onKeyUp={[Function]}
                                                  onMouseDown={[Function]}
                                                  onMouseEnter={[Function]}
                                                  onMouseLeave={[Function]}
                                                  onMouseUp={[Function]}
                                                  onTouchCancel={[Function]}
                                                  onTouchEnd={[Function]}
                                                  onTouchStart={[Function]}
                                                  pressed={false}
                                                  style={
                                                    Array [
                                                      Object {
                                                        "_definition": Object {
                                                          "left": 16,
                                                          "position": "absolute",
                                                          "top": 16,
                                                          "zIndex": 1,
                                                        },
                                                        "_len": 53,
                                                        "_name": "closeButton_zjmm3o",
                                                      },
                                                      false,
                                                      false,
                                                      Array [
                                                        undefined,
                                                        undefined,
                                                      ],
                                                    ]
                                                  }
                                                  tabIndex={0}
                                                >
                                                  <StyleComponent
                                                    aria-label="Close modal"
                                                    disabled={false}
                                                    onBlur={[Function]}
                                                    onClick={[Function]}
                                                    onDragStart={[Function]}
                                                    onFocus={[Function]}
                                                    onKeyDown={[Function]}
                                                    onKeyUp={[Function]}
                                                    onMouseDown={[Function]}
                                                    onMouseEnter={[Function]}
                                                    onMouseLeave={[Function]}
                                                    onMouseUp={[Function]}
                                                    onTouchCancel={[Function]}
                                                    onTouchEnd={[Function]}
                                                    onTouchStart={[Function]}
                                                    style={
                                                      Array [
                                                        Array [
                                                          Object {
                                                            "_definition": Object {
                                                              "alignItems": "center",
                                                              "background": "none",
                                                              "border": "none",
                                                              "boxSizing": "border-box",
                                                              "cursor": "pointer",
                                                              "display": "inline-flex",
                                                              "height": 40,
                                                              "justifyContent": "center",
                                                              "margin": -8,
                                                              "outline": "none",
                                                              "padding": 0,
                                                              "position": "relative",
                                                              "textDecoration": "none",
                                                              "touchAction": "manipulation",
                                                              "width": 40,
                                                            },
                                                            "_len": 292,
                                                            "_name": "shared_smh163",
                                                          },
                                                          false,
                                                          Object {
                                                            "_definition": Object {
                                                              "color": "rgba(33,36,44,0.64)",
                                                            },
                                                            "_len": 31,
                                                            "_name": "default_7sq9ra",
                                                          },
                                                          false,
                                                          false,
                                                        ],
                                                        Array [
                                                          Object {
                                                            "_definition": Object {
                                                              "left": 16,
                                                              "position": "absolute",
                                                              "top": 16,
                                                              "zIndex": 1,
                                                            },
                                                            "_len": 53,
                                                            "_name": "closeButton_zjmm3o",
                                                          },
                                                          false,
                                                          false,
                                                          Array [
                                                            undefined,
                                                            undefined,
                                                          ],
                                                        ],
                                                      ]
                                                    }
                                                    tabIndex={0}
                                                    type="button"
                                                  >
                                                    <button
                                                      aria-label="Close modal"
                                                      className=""
                                                      disabled={false}
                                                      onBlur={[Function]}
                                                      onClick={[Function]}
                                                      onDragStart={[Function]}
                                                      onFocus={[Function]}
                                                      onKeyDown={[Function]}
                                                      onKeyUp={[Function]}
                                                      onMouseDown={[Function]}
                                                      onMouseEnter={[Function]}
                                                      onMouseLeave={[Function]}
                                                      onMouseUp={[Function]}
                                                      onTouchCancel={[Function]}
                                                      onTouchEnd={[Function]}
                                                      onTouchStart={[Function]}
                                                      style={
                                                        Object {
                                                          "::MozFocusInner": Object {
                                                            "border": 0,
                                                          },
                                                          "alignItems": "center",
                                                          "background": "none",
                                                          "border": "none",
                                                          "boxSizing": "border-box",
                                                          "color": "rgba(33,36,44,0.64)",
                                                          "cursor": "pointer",
                                                          "display": "inline-flex",
                                                          "height": 40,
                                                          "justifyContent": "center",
                                                          "left": 16,
                                                          "margin": -8,
                                                          "outline": "none",
                                                          "padding": 0,
                                                          "position": "absolute",
                                                          "textDecoration": "none",
                                                          "top": 16,
                                                          "touchAction": "manipulation",
                                                          "width": 40,
                                                          "zIndex": 1,
                                                        }
                                                      }
                                                      tabIndex={0}
                                                      type="button"
                                                    >
                                                      <Icon
                                                        color="currentColor"
                                                        icon={
                                                          Object {
                                                            "medium": "M12 10.586L7.706 6.293a1 1 0 1 0-1.413 1.413L10.586 12l-4.293 4.294a1 1 0 0 0 1.413 1.413L12 13.414l4.294 4.293a1 1 0 0 0 1.413-1.413L13.414 12l4.293-4.294a1 1 0 1 0-1.413-1.413L12 10.586z",
                                                            "small": "M8 6.586l3.293-3.293a1 1 0 0 1 1.414 1.414L9.414 8l3.293 3.293a1 1 0 0 1-1.414 1.414L8 9.414l-3.293 3.293a1 1 0 1 1-1.414-1.414L6.586 8 3.293 4.707a1 1 0 0 1 1.414-1.414L8 6.586z",
                                                          }
                                                        }
                                                        size="medium"
                                                      >
                                                        <StyleComponent
                                                          height={24}
                                                          style={
                                                            Array [
                                                              Object {
                                                                "_definition": Object {
                                                                  "display": "inline-block",
                                                                  "flexGrow": 0,
                                                                  "flexShrink": 0,
                                                                  "verticalAlign": "text-bottom",
                                                                },
                                                                "_len": 84,
                                                                "_name": "svg_aeiopc",
                                                              },
                                                              undefined,
                                                            ]
                                                          }
                                                          viewBox="0 0 24 24"
                                                          width={24}
                                                        >
                                                          <svg
                                                            className=""
                                                            height={24}
                                                            style={
                                                              Object {
                                                                "display": "inline-block",
                                                                "flexGrow": 0,
                                                                "flexShrink": 0,
                                                                "verticalAlign": "text-bottom",
                                                              }
                                                            }
                                                            viewBox="0 0 24 24"
                                                            width={24}
                                                          >
                                                            <path
                                                              d="M12 10.586L7.706 6.293a1 1 0 1 0-1.413 1.413L10.586 12l-4.293 4.294a1 1 0 0 0 1.413 1.413L12 13.414l4.294 4.293a1 1 0 0 0 1.413-1.413L13.414 12l4.293-4.294a1 1 0 1 0-1.413-1.413L12 10.586z"
                                                              fill="currentColor"
                                                            />
                                                          </svg>
                                                        </StyleComponent>
                                                      </Icon>
                                                    </button>
                                                  </StyleComponent>
                                                </IconButtonCore>
                                              </ClickableBehavior>
                                            </IconButton>
                                          </CloseButton>
                                        </MediaLayoutInternal>
                                      </MediaLayout>
                                      <ModalContent
                                        scrollOverflow={true}
                                        style={
                                          Array [
                                            false,
                                            Array [
                                              Object {
                                                "_definition": Object {
                                                  "paddingBottom": 32,
                                                },
                                                "_len": 20,
                                                "_name": "hasFooter_1pn52au",
                                              },
                                              false,
                                              false,
                                              Array [
                                                undefined,
                                                undefined,
                                              ],
                                            ],
                                            Array [
                                              undefined,
                                              false,
                                              false,
                                              Array [
                                                undefined,
                                                undefined,
                                              ],
                                            ],
                                            undefined,
                                          ]
                                        }
                                      >
                                        <MediaLayout
                                          styleSheets={
                                            Object {
                                              "all": Object {
                                                "content": Object {
                                                  "_definition": Object {
                                                    "boxSizing": "border-box",
                                                    "flex": 1,
                                                    "minHeight": "100%",
                                                    "padding": 64,
                                                  },
                                                  "_len": 67,
                                                  "_name": "content_9s1qwq",
                                                },
                                                "scrollOverflow": Object {
                                                  "_definition": Object {
                                                    "overflow": "auto",
                                                  },
                                                  "_len": 19,
                                                  "_name": "scrollOverflow_oowqdm",
                                                },
                                                "wrapper": Object {
                                                  "_definition": Object {
                                                    "display": "block",
                                                    "flex": 1,
                                                  },
                                                  "_len": 28,
                                                  "_name": "wrapper_12fltve",
                                                },
                                              },
                                              "small": Object {
                                                "content": Object {
                                                  "_definition": Object {
                                                    "padding": "32px 16px",
                                                  },
                                                  "_len": 23,
                                                  "_name": "content_1a04pla",
                                                },
                                              },
                                            }
                                          }
                                        >
                                          <MediaLayoutInternal
                                            mediaSpec={
                                              Object {
                                                "large": Object {
                                                  "gutterWidth": 32,
                                                  "marginWidth": 48,
                                                  "query": "(min-width: 768px)",
                                                  "totalColumns": 12,
                                                },
                                                "small": Object {
                                                  "gutterWidth": 16,
                                                  "marginWidth": 16,
                                                  "query": "(max-width: 767px)",
                                                  "totalColumns": 4,
                                                },
                                              }
                                            }
                                            ssrSize="large"
                                            styleSheets={
                                              Object {
                                                "all": Object {
                                                  "content": Object {
                                                    "_definition": Object {
                                                      "boxSizing": "border-box",
                                                      "flex": 1,
                                                      "minHeight": "100%",
                                                      "padding": 64,
                                                    },
                                                    "_len": 67,
                                                    "_name": "content_9s1qwq",
                                                  },
                                                  "scrollOverflow": Object {
                                                    "_definition": Object {
                                                      "overflow": "auto",
                                                    },
                                                    "_len": 19,
                                                    "_name": "scrollOverflow_oowqdm",
                                                  },
                                                  "wrapper": Object {
                                                    "_definition": Object {
                                                      "display": "block",
                                                      "flex": 1,
                                                    },
                                                    "_len": 28,
                                                    "_name": "wrapper_12fltve",
                                                  },
                                                },
                                                "small": Object {
                                                  "content": Object {
                                                    "_definition": Object {
                                                      "padding": "32px 16px",
                                                    },
                                                    "_len": 23,
                                                    "_name": "content_1a04pla",
                                                  },
                                                },
                                              }
                                            }
                                          >
                                            <View
                                              style={
                                                Array [
                                                  Array [
                                                    Object {
                                                      "_definition": Object {
                                                        "display": "block",
                                                        "flex": 1,
                                                      },
                                                      "_len": 28,
                                                      "_name": "wrapper_12fltve",
                                                    },
                                                    false,
                                                    false,
                                                    Array [
                                                      undefined,
                                                      undefined,
                                                    ],
                                                  ],
                                                  Array [
                                                    Object {
                                                      "_definition": Object {
                                                        "overflow": "auto",
                                                      },
                                                      "_len": 19,
                                                      "_name": "scrollOverflow_oowqdm",
                                                    },
                                                    false,
                                                    false,
                                                    Array [
                                                      undefined,
                                                      undefined,
                                                    ],
                                                  ],
                                                ]
                                              }
                                            >
                                              <StyleComponent
                                                style={
                                                  Array [
                                                    Array [
                                                      Object {
                                                        "_definition": Object {
                                                          "display": "block",
                                                          "flex": 1,
                                                        },
                                                        "_len": 28,
                                                        "_name": "wrapper_12fltve",
                                                      },
                                                      false,
                                                      false,
                                                      Array [
                                                        undefined,
                                                        undefined,
                                                      ],
                                                    ],
                                                    Array [
                                                      Object {
                                                        "_definition": Object {
                                                          "overflow": "auto",
                                                        },
                                                        "_len": 19,
                                                        "_name": "scrollOverflow_oowqdm",
                                                      },
                                                      false,
                                                      false,
                                                      Array [
                                                        undefined,
                                                        undefined,
                                                      ],
                                                    ],
                                                  ]
                                                }
                                              >
                                                <div
                                                  className=""
                                                  style={
                                                    Object {
                                                      "alignItems": "stretch",
                                                      "borderStyle": "solid",
                                                      "borderWidth": 0,
                                                      "boxSizing": "border-box",
                                                      "display": "block",
                                                      "flex": 1,
                                                      "flexDirection": "column",
                                                      "margin": 0,
                                                      "minHeight": 0,
                                                      "minWidth": 0,
                                                      "overflow": "auto",
                                                      "padding": 0,
                                                      "position": "relative",
                                                      "zIndex": 0,
                                                    }
                                                  }
                                                >
                                                  <View
                                                    style={
                                                      Array [
                                                        Array [
                                                          Object {
                                                            "_definition": Object {
                                                              "boxSizing": "border-box",
                                                              "flex": 1,
                                                              "minHeight": "100%",
                                                              "padding": 64,
                                                            },
                                                            "_len": 67,
                                                            "_name": "content_9s1qwq",
                                                          },
                                                          false,
                                                          false,
                                                          Array [
                                                            undefined,
                                                            undefined,
                                                          ],
                                                        ],
                                                        Array [
                                                          false,
                                                          Array [
                                                            Object {
                                                              "_definition": Object {
                                                                "paddingBottom": 32,
                                                              },
                                                              "_len": 20,
                                                              "_name": "hasFooter_1pn52au",
                                                            },
                                                            false,
                                                            false,
                                                            Array [
                                                              undefined,
                                                              undefined,
                                                            ],
                                                          ],
                                                          Array [
                                                            undefined,
                                                            false,
                                                            false,
                                                            Array [
                                                              undefined,
                                                              undefined,
                                                            ],
                                                          ],
                                                          undefined,
                                                        ],
                                                      ]
                                                    }
                                                  >
                                                    <StyleComponent
                                                      style={
                                                        Array [
                                                          Array [
                                                            Object {
                                                              "_definition": Object {
                                                                "boxSizing": "border-box",
                                                                "flex": 1,
                                                                "minHeight": "100%",
                                                                "padding": 64,
                                                              },
                                                              "_len": 67,
                                                              "_name": "content_9s1qwq",
                                                            },
                                                            false,
                                                            false,
                                                            Array [
                                                              undefined,
                                                              undefined,
                                                            ],
                                                          ],
                                                          Array [
                                                            false,
                                                            Array [
                                                              Object {
                                                                "_definition": Object {
                                                                  "paddingBottom": 32,
                                                                },
                                                                "_len": 20,
                                                                "_name": "hasFooter_1pn52au",
                                                              },
                                                              false,
                                                              false,
                                                              Array [
                                                                undefined,
                                                                undefined,
                                                              ],
                                                            ],
                                                            Array [
                                                              undefined,
                                                              false,
                                                              false,
                                                              Array [
                                                                undefined,
                                                                undefined,
                                                              ],
                                                            ],
                                                            undefined,
                                                          ],
                                                        ]
                                                      }
                                                    >
                                                      <div
                                                        className=""
                                                        style={
                                                          Object {
                                                            "alignItems": "stretch",
                                                            "borderStyle": "solid",
                                                            "borderWidth": 0,
                                                            "boxSizing": "border-box",
                                                            "display": "flex",
                                                            "flex": 1,
                                                            "flexDirection": "column",
                                                            "margin": 0,
                                                            "minHeight": "100%",
                                                            "minWidth": 0,
                                                            "padding": 64,
                                                            "paddingBottom": 32,
                                                            "position": "relative",
                                                            "zIndex": 0,
                                                          }
                                                        }
                                                      >
                                                        Content
                                                      </div>
                                                    </StyleComponent>
                                                  </View>
                                                </div>
                                              </StyleComponent>
                                            </View>
                                          </MediaLayoutInternal>
                                        </MediaLayout>
                                      </ModalContent>
                                      <ModalFooter>
                                        <View
                                          style={
                                            Array [
                                              Object {
                                                "_definition": Object {
                                                  "alignItems": "center",
                                                  "borderTopColor": "rgba(33,36,44,0.16)",
                                                  "borderTopStyle": "solid",
                                                  "borderTopWidth": 1,
                                                  "boxSizing": "border-box",
                                                  "display": "flex",
                                                  "flex": "0 0 auto",
                                                  "flexDirection": "row",
                                                  "justifyContent": "flex-end",
                                                  "minHeight": 64,
                                                  "paddingBottom": 8,
                                                  "paddingLeft": 16,
                                                  "paddingRight": 16,
                                                  "paddingTop": 8,
                                                },
                                                "_len": 299,
                                                "_name": "footer_b45ce1",
                                              },
                                              undefined,
                                            ]
                                          }
                                        >
                                          <StyleComponent
                                            style={
                                              Array [
                                                Object {
                                                  "_definition": Object {
                                                    "alignItems": "center",
                                                    "borderTopColor": "rgba(33,36,44,0.16)",
                                                    "borderTopStyle": "solid",
                                                    "borderTopWidth": 1,
                                                    "boxSizing": "border-box",
                                                    "display": "flex",
                                                    "flex": "0 0 auto",
                                                    "flexDirection": "row",
                                                    "justifyContent": "flex-end",
                                                    "minHeight": 64,
                                                    "paddingBottom": 8,
                                                    "paddingLeft": 16,
                                                    "paddingRight": 16,
                                                    "paddingTop": 8,
                                                  },
                                                  "_len": 299,
                                                  "_name": "footer_b45ce1",
                                                },
                                                undefined,
                                              ]
                                            }
                                          >
                                            <div
                                              className=""
                                              style={
                                                Object {
                                                  "alignItems": "center",
                                                  "borderStyle": "solid",
                                                  "borderTopColor": "rgba(33,36,44,0.16)",
                                                  "borderTopStyle": "solid",
                                                  "borderTopWidth": 1,
                                                  "borderWidth": 0,
                                                  "boxSizing": "border-box",
                                                  "display": "flex",
                                                  "flex": "0 0 auto",
                                                  "flexDirection": "row",
                                                  "justifyContent": "flex-end",
                                                  "margin": 0,
                                                  "minHeight": 64,
                                                  "minWidth": 0,
                                                  "padding": 0,
                                                  "paddingBottom": 8,
                                                  "paddingLeft": 16,
                                                  "paddingRight": 16,
                                                  "paddingTop": 8,
                                                  "position": "relative",
                                                  "zIndex": 0,
                                                }
                                              }
                                            >
                                              Footer
                                            </div>
                                          </StyleComponent>
                                        </View>
                                      </ModalFooter>
                                    </div>
                                  </StyleComponent>
                                </View>
                              </MediaLayoutInternal>
                            </MediaLayout>
                          </ModalPanel>
                        </div>
                      </StyleComponent>
                    </View>
                  </div>
                </StyleComponent>
              </View>
            </div>
          </StyleComponent>
        </View>
      </MediaLayoutInternal>
    </MediaLayout>
  </ModalDialog>
</LargeOneColumnModal>
`;
